apps/homepage/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: homepage
  namespace: default
spec:
  ports:
  - port: 80
    targetPort: 3000
  selector:
    app: homepage
